--- a/!part4_midi.ipynb
+++ b/!part4_midi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -10,12 +10,13 @@
    "source": [
     "import pandas as pd\n",
     "import re\n",
-    "import mido"
+    "import mido\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,64 +56,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.008\n",
-      "time0.08000000000000002\n",
-      "0.009999999999999981\n",
-      "time0.241\n",
-      "0.02300000000000002\n",
-      "time0.355\n",
+      "0.12\n",
+      "time0.18700000000000003\n",
+      "0.009999999999999953\n",
+      "time0.245\n",
       "0.010000000000000009\n",
-      "time0.444\n",
-      "0.04800000000000004\n",
-      "time0.5820000000000001\n",
-      "0.025999999999999912\n",
-      "time0.742\n",
-      "0.3800000000000001\n",
-      "time1.2610000000000001\n",
-      "0.02200000000000002\n",
-      "time1.5530000000000002\n",
-      "1.215\n",
-      "time2.959\n",
-      "0.18900000000000006\n",
-      "time3.214\n",
-      "0.014000000000000234\n",
-      "time3.379\n",
-      "0.019000000000000128\n",
-      "time3.446\n",
+      "time0.306\n",
+      "0.03500000000000003\n",
+      "time0.465\n",
+      "0.0779999999999999\n",
+      "time0.746\n",
+      "0.017000000000000015\n",
+      "time0.8240000000000001\n",
+      "0.0119999999999999\n",
+      "time0.858\n",
+      "0.013000000000000012\n",
+      "time0.918\n",
+      "0.009999999999999898\n",
+      "time1.028\n",
+      "0.010000000000000009\n",
+      "time1.103\n",
+      "0.014000000000000012\n",
+      "time1.185\n",
+      "0.018999999999999906\n",
+      "time1.474\n",
+      "0.016000000000000014\n",
+      "time1.683\n",
+      "0.040000000000000036\n",
+      "time1.851\n",
+      "0.18400000000000016\n",
+      "time2.3850000000000002\n",
+      "0.022999999999999687\n",
+      "time2.485\n",
+      "0.01200000000000001\n",
+      "time2.558\n",
       "0.010000000000000231\n",
-      "time3.6010000000000004\n",
-      "0.016999999999999904\n",
-      "time3.7870000000000004\n",
-      "0.06199999999999939\n",
-      "time4.096\n",
-      "0.6719999999999997\n",
-      "time4.959\n",
-      "0.48600000000000065\n",
-      "time5.612\n",
-      "0.03399999999999981\n",
-      "time5.822\n",
-      "0.021999999999999353\n",
-      "time6.004\n",
+      "time2.623\n",
+      "0.04800000000000004\n",
+      "time2.862\n",
+      "0.019999999999999574\n",
+      "time2.9719999999999995\n",
+      "0.023000000000000576\n",
+      "time3.0500000000000003\n",
+      "0.18799999999999972\n",
+      "time3.569\n",
+      "0.7920000000000007\n",
+      "time4.545000000000001\n",
+      "0.011999999999998678\n",
+      "time4.707\n",
+      "0.06099999999999994\n",
+      "time5.025\n",
       "0.009999999999999787\n",
-      "time6.138999999999999\n",
-      "0.07200000000000095\n",
-      "time6.296\n",
-      "0.03000000000000025\n",
-      "time6.481000000000001\n",
-      "1.286999999999999\n",
-      "time7.959\n"
+      "time5.385\n",
+      "0.022999999999999687\n",
+      "time5.484999999999999\n",
+      "0.012000000000001343\n",
+      "time5.558000000000001\n",
+      "0.009999999999998899\n",
+      "time5.622999999999999\n",
+      "0.04800000000000093\n",
+      "time5.862\n",
+      "0.020000000000000462\n",
+      "time5.972\n",
+      "0.022999999999999687\n",
+      "time5.998\n",
+      "0.009999999999998899\n",
+      "time6.079999999999999\n",
+      "0.010000000000000675\n",
+      "time6.241\n",
+      "0.022999999999999687\n",
+      "time6.3549999999999995\n",
+      "0.010000000000000675\n",
+      "time6.444\n",
+      "0.04800000000000093\n",
+      "time6.582000000000001\n",
+      "0.025999999999998913\n",
+      "time6.742\n",
+      "0.3150000000000004\n",
+      "time7.243\n",
+      "0.014000000000000234\n",
+      "time7.412000000000001\n",
+      "0.028999999999999027\n",
+      "time7.717\n",
+      "0.33199999999999985\n",
+      "time8.135\n",
+      "0.016000000000000014\n",
+      "time8.286\n",
+      "0.02000000000000135\n",
+      "time8.578000000000001\n",
+      "0.7829999999999995\n",
+      "time9.545\n",
+      "0.012000000000000455\n",
+      "time9.707\n",
+      "0.06099999999999817\n",
+      "time10.079999999999998\n",
+      "0.010000000000001563\n",
+      "time10.222\n",
+      "0.010000000000001563\n",
+      "time10.456000000000001\n",
+      "0.28999999999999737\n",
+      "time10.899999999999999\n",
+      "0.14000000000000057\n",
+      "time11.152\n",
+      "0.045000000000001705\n",
+      "time11.312000000000001\n",
+      "0.053999999999998494\n",
+      "time11.6\n"
      ]
     }
    ],
    "source": [
-    "filename = \"webster_8_simple\"\n",
+    "filename = \"12_bar_simple\"\n",
     "df = pd.read_csv(\"generated_solos/\" + filename + \".csv\")\n",
     "mid = mido.MidiFile()\n",
     "track = mido.MidiTrack()\n",
@@ -124,11 +185,23 @@
     "for index, row in df.iterrows():\n",
     "    y = row[2] - time_count\n",
     "    print(y)\n",
+    "    \n",
     "    track.append(mido.Message('note_on', note=name_to_num(row[1]), velocity=64, time= int(y * 4 * mid.ticks_per_beat)))\n",
+    "    interval = random.choice([0, 7, 9])\n",
+    "    track.append(mido.Message('note_on', note=name_to_num(row[1]) + interval, velocity=64, time= 0))\n",
     "    time_count = row[2] \n",
     "    x = int(mid.ticks_per_beat *  row[3] * 4)\n",
-    "    track.append(mido.Message('note_off', note=name_to_num(row[1]), velocity=64, time= x))\n",
+    "    track.append(mido.Message('note_off', note=name_to_num(row[1]), velocity=64, time= x * 2))\n",
+    "    track.append(mido.Message('note_off', note=name_to_num(row[1]) + interval, velocity=64, time= 0))\n",
     "    time_count += row[3]\n",
+    "    \n",
+    "    interval = random.choice([0, 7, 9])\n",
+    "    track.append(mido.Message('note_on', note=name_to_num(row[1]) + interval, velocity=64, time= 0))\n",
+    "    time_count = row[2] \n",
+    "    x = int(mid.ticks_per_beat *  row[3] * 4)\n",
+    "    track.append(mido.Message('note_off', note=name_to_num(row[1]) + interval, velocity=64, time= x * 2))\n",
+    "    time_count += row[3]\n",
+    "    \n",
     "    print(\"time\" + str(time_count))\n",
     "mid.save('generated_solos/' + filename + '.mid')\n"
    ]
