--- a/!part3_modeling.ipynb
+++ b/!part3_modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -594,7 +594,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nodes = generate_nodes(get_kmeans_clusters(s_exp_features))\n",
@@ -834,6 +836,11 @@
     "\n",
     "use_chords = webster_first8\n",
     "notes_df = produce_notes(len(use_chords), use_chords, nodes)\n",
+    "\n",
+    "notes_df['new_duration'] = np.ceil(notes_df['start_time']) - notes_df['start_time']\n",
+    "notes_df['duration'] = notes_df[['duration', 'new_duration']].min(axis=1)\n",
+    "notes_df = notes_df.drop('new_duration', axis=1)\n",
+    "\n",
     "notes_df"
    ]
   },
