--- a/!part3_modeling.ipynb
+++ b/!part3_modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -38,84 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>exp</th>\n",
-       "      <th>song_id</th>\n",
-       "      <th>song_index</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0 4 X|0.125|0.155 X|0.290|0.725</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0 0 L|0.678|0.340</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>-3 0 X|0.036|0.174 X|0.255|0.164 C|0.443|0.195...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0 0 C|0.004|0.243</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>-3 7 X|0.171|0.073 C|0.263|0.130 X|0.408|0.185...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                 exp  song_id  song_index\n",
-       "0                    0 4 X|0.125|0.155 X|0.290|0.725        0           0\n",
-       "1                                  0 0 L|0.678|0.340        0           1\n",
-       "2  -3 0 X|0.036|0.174 X|0.255|0.164 C|0.443|0.195...        0           2\n",
-       "3                                  0 0 C|0.004|0.243        0           3\n",
-       "4  -3 7 X|0.171|0.073 C|0.263|0.130 X|0.408|0.185...        0           4"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s_exp_labels = pd.read_csv(labels_path, index_col=0)\n",
     "s_exp_labels.head()"
@@ -123,102 +48,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.125000</td>\n",
-       "      <td>0.584635</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0880</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.678385</td>\n",
-       "      <td>-0.678385</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.1360</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.036458</td>\n",
-       "      <td>-11.315104</td>\n",
-       "      <td>1.5</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.3913</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.003906</td>\n",
-       "      <td>-2.003906</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.1944</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.170573</td>\n",
-       "      <td>-31.157552</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>0.5540</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     0         1          2    3    4       5\n",
-       "0  2.0  0.125000   0.584635  4.0  0.0  0.0880\n",
-       "1  1.0  0.678385  -0.678385  0.0  0.0  0.1360\n",
-       "2  5.0  0.036458 -11.315104  1.5  1.0  0.3913\n",
-       "3  1.0  0.003906  -2.003906  0.0  0.0  0.1944\n",
-       "4  7.0  0.170573 -31.157552  4.0  2.0  0.5540"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s_exp_features = pd.read_csv(features_path, index_col = 0)\n",
     "s_exp_features.head()"
@@ -233,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -311,20 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "23"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "exp_to_cluster_ratio = 4\n",
     "k_size = int(len(s_exp_features) / exp_to_cluster_ratio)\n",
@@ -333,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -348,25 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0,  6, 22, 13, 11,  7,  7,  2, 11,  0, 22,  7, 13,  3,  7,  6, 19,\n",
-       "       20, 13,  3,  7, 11,  8,  2,  8,  8, 19,  2,  8,  5,  6, 22, 14, 13,\n",
-       "       17, 10,  8, 18, 14,  9,  6, 14, 14, 13,  8,  6, 16,  1, 18,  6, 17,\n",
-       "        9, 14, 20, 14, 10,  2, 21, 15, 18, 17,  5, 18, 10,  9, 13,  1,  1,\n",
-       "        6, 15,  4,  2, 12, 10, 17, 18,  6,  1, 18,  3,  4,  5, 18,  5,  1,\n",
-       "        1, 21,  4,  5,  5, 13, 15])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_kmeans_clusters(s_exp_features)"
    ]
@@ -381,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -399,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -424,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -455,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -472,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -499,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -523,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -555,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -593,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -605,234 +410,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>note_name</th>\n",
-       "      <th>start_time</th>\n",
-       "      <th>duration</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Gb4</td>\n",
-       "      <td>0.122</td>\n",
-       "      <td>0.139</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>E4</td>\n",
-       "      <td>0.283</td>\n",
-       "      <td>0.270</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>E4</td>\n",
-       "      <td>1.754</td>\n",
-       "      <td>0.073</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>F4</td>\n",
-       "      <td>1.848</td>\n",
-       "      <td>0.168</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Gb4</td>\n",
-       "      <td>2.104</td>\n",
-       "      <td>0.147</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Gb4</td>\n",
-       "      <td>2.264</td>\n",
-       "      <td>0.184</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Gb4</td>\n",
-       "      <td>2.579</td>\n",
-       "      <td>0.326</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>C5</td>\n",
-       "      <td>3.233</td>\n",
-       "      <td>0.176</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Ab5</td>\n",
-       "      <td>3.427</td>\n",
-       "      <td>0.184</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Eb6</td>\n",
-       "      <td>3.630</td>\n",
-       "      <td>0.293</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>B6</td>\n",
-       "      <td>3.934</td>\n",
-       "      <td>0.188</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Gb6</td>\n",
-       "      <td>4.129</td>\n",
-       "      <td>0.150</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Gb6</td>\n",
-       "      <td>4.318</td>\n",
-       "      <td>0.288</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Eb6</td>\n",
-       "      <td>5.259</td>\n",
-       "      <td>0.154</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>F5</td>\n",
-       "      <td>5.518</td>\n",
-       "      <td>0.135</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Db5</td>\n",
-       "      <td>5.671</td>\n",
-       "      <td>0.331</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>E5</td>\n",
-       "      <td>6.121</td>\n",
-       "      <td>0.293</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Gb5</td>\n",
-       "      <td>6.426</td>\n",
-       "      <td>0.095</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>G5</td>\n",
-       "      <td>6.533</td>\n",
-       "      <td>0.247</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>E5</td>\n",
-       "      <td>6.793</td>\n",
-       "      <td>0.116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>A5</td>\n",
-       "      <td>6.922</td>\n",
-       "      <td>0.135</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Bb5</td>\n",
-       "      <td>7.055</td>\n",
-       "      <td>0.181</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Bb5</td>\n",
-       "      <td>7.272</td>\n",
-       "      <td>0.161</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Bb5</td>\n",
-       "      <td>7.477</td>\n",
-       "      <td>0.154</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>Bb5</td>\n",
-       "      <td>7.693</td>\n",
-       "      <td>0.155</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Bb5</td>\n",
-       "      <td>7.898</td>\n",
-       "      <td>0.158</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   note_name  start_time duration\n",
-       "0        Gb4       0.122    0.139\n",
-       "1         E4       0.283    0.270\n",
-       "2         E4       1.754    0.073\n",
-       "3         F4       1.848    0.168\n",
-       "4        Gb4       2.104    0.147\n",
-       "5        Gb4       2.264    0.184\n",
-       "6        Gb4       2.579    0.326\n",
-       "7         C5       3.233    0.176\n",
-       "8        Ab5       3.427    0.184\n",
-       "9        Eb6       3.630    0.293\n",
-       "10        B6       3.934    0.188\n",
-       "11       Gb6       4.129    0.150\n",
-       "12       Gb6       4.318    0.288\n",
-       "13       Eb6       5.259    0.154\n",
-       "14        F5       5.518    0.135\n",
-       "15       Db5       5.671    0.331\n",
-       "16        E5       6.121    0.293\n",
-       "17       Gb5       6.426    0.095\n",
-       "18        G5       6.533    0.247\n",
-       "19        E5       6.793    0.116\n",
-       "20        A5       6.922    0.135\n",
-       "21       Bb5       7.055    0.181\n",
-       "22       Bb5       7.272    0.161\n",
-       "23       Bb5       7.477    0.154\n",
-       "24       Bb5       7.693    0.155\n",
-       "25       Bb5       7.898    0.158"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "webster_first8 = ['Em7b5', 'A7', 'Dj7', 'Dj7', 'Em7b5', 'A7', 'Dj7', 'Dj7']\n",
-    "blues_simple12 = ['Bb', 'Bb', 'Bb', 'Bb', 'Eb', 'Eb', 'Bb', 'Bb', 'F', 'F7', 'Bb', 'Bb']\n",
+    "blues_simple12 = ['C7', 'C7', 'C7', 'C7', 'F7', 'F7', 'C7', 'C7', 'G7', 'F7', 'C7', 'G7']\n",
+    "blues_simple12x2 = blues_simple12 + blues_simple12\n",
     "\n",
     "use_chords = webster_first8\n",
     "notes_df = produce_notes(len(use_chords), use_chords, nodes)\n",
@@ -846,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
